# bls-signatures

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  build.rs  install.sh
.circleci/: config.yml
.github/workflows/: ci.yml
benches/: serialize.rs  sign.rs  verify.rs
bls-signatures-ffi/: Cargo.toml  build.rs
bls-signatures-ffi/examples/: ffi.rs
bls-signatures-ffi/src/: lib.rs  responses.rs
examples/: verify.rs
scripts/: package-release.sh  publish-release.sh
src/: error.rs  key-min-sig.rs  key.rs  lib.rs  signature-min-sig.rs  signature.rs  signature_min_sig.rs
src/api/: mod.rs  responses.rs
tests/: data.json
