[package]
name = "bls-signatures"
version = "0.4.0"
authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

description = "Aggregate BLS Signatures"
documentation = "https://docs.rs/bls-signatures"
homepage = "https://github.com/filecoin-project/bls-signatures"
repository = "https://github.com/filecoin-project/bls-signatures"
readme = "README.md"

[package.metadata.release]
pre-release-commit-message = "chore(release): release {{version}}"
pro-release-commit-message = "chore(release): starting development cycle for {{next_version}}"

[dependencies]
ff = { version = "0.2", package = "fff" }
groupy = "0.3.0"
paired = "0.17.0"
rayon = "1"
rand_core = "0.5.1"
thiserror = "1.0"
sha2ni = "0.8.1"
hkdf = "0.8.0"

[workspace]
members = [
  "bls-signatures-ffi",
]

[features]
default = []

[dev-dependencies]
rand_xorshift = "0.2.0"
rand = "0.7"
hex = "0.4.2"

[patch.crates-io]
paired = { git = "https://github.com/filecoin-project/pairing", branch = "feat/hash-to-curve" }
