[package]
name = "bls-signatures"
version = "0.6.1"
authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

description = "Aggregate BLS Signatures"
documentation = "https://docs.rs/bls-signatures"
homepage = "https://github.com/filecoin-project/bls-signatures"
repository = "https://github.com/filecoin-project/bls-signatures"
readme = "README.md"

[package.metadata.release]
pre-release-commit-message = "chore(release): release {{version}}"
pro-release-commit-message = "chore(release): starting development cycle for {{next_version}}"

[dependencies]
ff = { version = "0.2", package = "fff" }
groupy = "0.3.0"
paired = "0.20.0"
rayon = "1"
rand_core = "0.5.1"
thiserror = "1.0"
sha2ni = "0.8.1"
hkdf = "0.8.0"

[workspace]
members = [
  "bls-signatures-ffi",
]

[features]
default = []

[dev-dependencies]
rand = "0.7"
base64 = "0.12.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
base64-serde = "0.5.1"
rand_chacha = "0.2.2"


