[package]
name = "bls-signatures"
version = "0.7.1"
authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

description = "Aggregate BLS Signatures"
documentation = "https://docs.rs/bls-signatures"
homepage = "https://github.com/filecoin-project/bls-signatures"
repository = "https://github.com/filecoin-project/bls-signatures"
readme = "README.md"

[package.metadata.release]
pre-release-commit-message = "chore(release): release {{version}}"
pro-release-commit-message = "chore(release): starting development cycle for {{next_version}}"

[dependencies]
rayon = "1"
rand_core = "0.5.1"
thiserror = "1.0"

ff = { version = "0.2", package = "fff" }
groupy = "0.3.0"

paired = { version = "0.21.0", optional = true }
sha2 = { version = "0.9", optional = true }
hkdf = { version = "0.10.0", optional = true }

blst_lib = { version = "0.2.0", optional = true, package = "blst" }
blstrs = { version = "0.1.3", optional = true }

[workspace]
members = [
  "bls-signatures-ffi",
]

[features]
default = ["pairing"]
pairing = [ "paired", "sha2", "hkdf" ]
blst = [ "blst_lib", "blstrs" ]
blst-portable = [ "blst_lib", "blst_lib/portable", "blstrs/portable" ]

[dev-dependencies]
rand = "0.7"
base64 = "0.12.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
base64-serde = "0.5.1"
rand_chacha = "0.2.2"
