[package]
name = "bls-signatures-ffi"
version = "0.1.0"
authors = ["sidke <sidney@carbonfive.com>", "dignifiedquire <dignifiedquire@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
bls-signatures = { path = "..", default-features = false }
rand = "0.7"
libc = "0.2"
rayon = "1.2.0"

[build-dependencies]
cbindgen = { version = "0.13.1", default-features = false }

[features]
default = ["pairing"]
pairing = [ "bls-signatures/pairing" ]
blst = [ "bls-signatures/blst" ]
