[package]
name = "bls-signatures-ffi"
version = "0.1.0"
authors = ["sidke <sidney@carbonfive.com>", "dignifiedquire <dignifiedquire@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
bls-signatures = { path = "..", default-features = false }
rand = "0.7"
libc = "0.2"
rayon = "1.2.0"
groupy = "0.3.0"

#blstrs = { version = "0.1.2", optional = true }
blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "0-1-portable", optional = true }
paired = { version = "0.21.0", optional = true }

[build-dependencies]
cbindgen = { version = "0.13.1", default-features = false }

[features]
default = ["pairing"]
pairing = [ "bls-signatures/pairing", "paired" ]
blst = [ "bls-signatures/blst", "blstrs" ]
blst-portable = [ "bls-signatures/blst-portable", "blstrs/portable" ]
