[package]
name = "bls-signatures-ffi"
version = "0.1.0"
authors = ["sidke <sidney@carbonfive.com>", "dignifiedquire <dignifiedquire@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
bls-signatures = { path = "..", default-features = false }
rand = "0.8"
libc = "0.2"

rayon = { version = "1.5.0", optional = true }
blstrs = { version = "0.7.0", optional = true }
bls12_381 = { version = "0.8.0", optional = true, features = ["experimental"] }
group = "0.13"

[build-dependencies]
cbindgen = { version = "0.13.1", default-features = false }

[features]
default = ["pairing", "multicore"]
pairing = [ "bls-signatures/pairing", "bls12_381" ]
blst = [ "bls-signatures/blst", "blstrs" ]
blst-portable = [ "bls-signatures/blst-portable", "blstrs/portable" ]
multicore = [ "bls-signatures/multicore", "rayon" ]
